# coco-ledstrip

./: CMakeLists.txt  conanfile.py
coco/: CMakeLists.txt  Color.hpp
coco/emu/coco/platform/: GuiLedStrip.cpp  GuiLedStrip.hpp  LedStrip_emu.cpp  LedStrip_emu.hpp
coco/native/coco/platform/: LedStrip_cout.cpp  LedStrip_cout.hpp
coco/nrf52/coco/platform/: LedStrip_I2S.cpp  LedStrip_I2S.hpp  bitTable_I2S.hpp
coco/stm32/coco/platform/: LedStrip_UART_DMA.cpp  LedStrip_UART_DMA.hpp
coco/stm32f0/coco/platform/: LedStrip_UART_DMA.cpp  LedStrip_UART_DMA.hpp  bitTable_UART.hpp
generator/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  LedStripTest.cpp
test/emu/: LedStripTest.hpp
test/native/: LedStripTest.hpp
test/nrf52dongle/: LedStripTest.hpp
test/progbox/: LedStripTest.hpp  SystemInit.cpp  config.hpp  debug.cpp  link.ld
test/stm32c031nucleo/: LedStripTest.hpp
test/stm32f3348discovery/: LedStripTest.hpp
test/stm32g431nucleo/: LedStripTest.hpp
test/stm32g474nucleo/: LedStripTest.hpp
